--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <button class="form-items" id="start-game">Start Game!</button>
 </div> 
 
+<div id="game-container">
 <div id="player-turn-container">
   <h1 id="player-turn">CHOOSE YOUR COLOR</h1>
 </div>
@@ -22,6 +23,7 @@
 <div class="custom-alert">
   <h3 class="custom-alert-body"></h3>
   <button class="custom-alert-button">Close</button>
+</div>
 </div>
 
 <script src="connect4.js"></script>
