--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <head>
+  <meta name="viewport" user-scalable=0">
   <title>Connect 4</title>
   <link href="connect4.css" rel="stylesheet">
 </head>
