--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=.8, minimum-scale=.8, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=.77, minimum-scale=.77, maximum-scale=.77, user-scalable=no">
   <title>Connect 4</title>
   <link href="connect4.css" rel="stylesheet">
 </head>
